Fixed Ellipsis not showing in the Tree when the text overflows

--- a/OpenELIS/version2/UI/trunk/src/org/openelis/ui/resources/css/tree.css
+++ b/OpenELIS/version2/UI/trunk/src/org/openelis/ui/resources/css/tree.css
@@ -17,7 +17,7 @@
 
 .Tree td {
 	overflow : hidden;
-	text-overfow : ellipsis;
+	text-overflow : ellipsis;
 	white-space : pre;
 	border : none;
 	color: black;
@@ -43,6 +43,8 @@
    font-family: Verdana, Arial, Helvetica, sans-serif;
    font-size: 10px;
    border-bottom:none;
+   white-space: pre;
+   text-overflow : ellipsis;
  }
  
 .TreeCell td {
